[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
base64 = "0.22.0"
bytes = "1.6.0"
image = "0.25.1"
lazy_static = "1.4.0"
lru = "0.12.3"
percent-encoding = "2.3.1"
photon-rs = "0.3.2"
prost = "0.12.4"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.2", features = ["add-extension", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.12.4"
